{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 107,
  "lineage": "ac6383cc-f3d0-9f66-a4ed-26aa6d0bdcab",
  "resources": [
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:707150221672:loadbalancer/app/my-loadbalancer/d0f5cf094d3046b3",
            "arn_suffix": "app/my-loadbalancer/d0f5cf094d3046b3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-loadbalancer-2084782444.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:707150221672:loadbalancer/app/my-loadbalancer/d0f5cf094d3046b3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-loadbalancer",
            "security_groups": [
              "sg-00177813bc8a25185"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-042eada2088c8b7e7"
              },
              {
                "subnet_id": "subnet-0a226b862067d6fe7"
              },
              {
                "subnet_id": "subnet-0b2bde6f66e20c5be"
              }
            ],
            "subnets": [
              "subnet-042eada2088c8b7e7",
              "subnet-0a226b862067d6fe7",
              "subnet-0b2bde6f66e20c5be"
            ],
            "vpc_id": "vpc-078d0e4dec802b086",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.compute.aws_autoscaling_group.my_database",
            "module.compute.aws_launch_template.my_database",
            "module.compute.data.aws_ami.linux",
            "module.networking.aws_security_group.my_private_sg",
            "module.networking.aws_security_group.my_public_sg",
            "module.networking.aws_security_group.my_web_sg",
            "module.networking.aws_subnet.my_public_subnet",
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:707150221672:listener/app/my-loadbalancer/d0f5cf094d3046b3/df1780aafb564369",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:707150221672:targetgroup/my-lb-tg-495/7112ca16abf51d5c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:707150221672:listener/app/my-loadbalancer/d0f5cf094d3046b3/df1780aafb564369",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:707150221672:loadbalancer/app/my-loadbalancer/d0f5cf094d3046b3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_autoscaling_group.my_database",
            "module.compute.aws_launch_template.my_database",
            "module.compute.data.aws_ami.linux",
            "module.loadbalancing.aws_lb.my_lb",
            "module.loadbalancing.aws_lb_target_group.my_tg",
            "module.networking.aws_security_group.my_private_sg",
            "module.networking.aws_security_group.my_public_sg",
            "module.networking.aws_security_group.my_web_sg",
            "module.networking.aws_subnet.my_public_subnet",
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:707150221672:targetgroup/my-lb-tg-495/7112ca16abf51d5c",
            "arn_suffix": "targetgroup/my-lb-tg-495/7112ca16abf51d5c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:707150221672:targetgroup/my-lb-tg-495/7112ca16abf51d5c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-lb-tg-495",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "my_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:route-table/rtb-05dda348180525cd3",
            "default_route_table_id": "rtb-05dda348180525cd3",
            "id": "rtb-05dda348180525cd3",
            "owner_id": "707150221672",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "project_private"
            },
            "tags_all": {
              "Name": "project_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1aa74fff113b6c4",
            "domain": "vpc",
            "id": "eipalloc-0a1aa74fff113b6c4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-23-150-141.compute-1.amazonaws.com",
            "public_ip": "23.23.150.141",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:internet-gateway/igw-0210bafd0d24c13e7",
            "id": "igw-0210bafd0d24c13e7",
            "owner_id": "707150221672",
            "tags": {
              "Name": "2tier_igw"
            },
            "tags_all": {
              "Name": "2tier_igw"
            },
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1aa74fff113b6c4",
            "connectivity_type": "public",
            "id": "nat-0f15465efc9d1c4a5",
            "network_interface_id": "eni-0e5d4e5f357cf4121",
            "private_ip": "10.0.2.220",
            "public_ip": "23.23.150.141",
            "subnet_id": "subnet-0a226b862067d6fe7"
          },
          "dependencies": [
            "module.networking.aws_eip.my_eip",
            "module.networking.aws_subnet.my_public_subnet",
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-040d3fd953d4415121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f15465efc9d1c4a5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-040d3fd953d441512",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.my_eip",
            "module.networking.aws_nat_gateway.my_natgateway",
            "module.networking.aws_route_table.my_private_rt",
            "module.networking.aws_subnet.my_public_subnet",
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0210bafd0d24c13e7",
            "id": "r-rtb-0ea382617b4540ade1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ea382617b4540ade",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.my_internet_gateway",
            "module.networking.aws_route_table.my_public_rt",
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:route-table/rtb-040d3fd953d441512",
            "id": "rtb-040d3fd953d441512",
            "owner_id": "707150221672",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "2tier_private"
            },
            "tags_all": {
              "Name": "2tier_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:route-table/rtb-0ea382617b4540ade",
            "id": "rtb-0ea382617b4540ade",
            "owner_id": "707150221672",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "2tier_public"
            },
            "tags_all": {
              "Name": "2tier_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030d7278ac34e61f9",
            "route_table_id": "rtb-040d3fd953d441512",
            "subnet_id": "subnet-028f88d5b0618188a"
          },
          "dependencies": [
            "module.networking.aws_route_table.my_private_rt",
            "module.networking.aws_subnet.my_private_subnet",
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f360daf8b811f723",
            "route_table_id": "rtb-040d3fd953d441512",
            "subnet_id": "subnet-08484d304082bb5b2"
          },
          "dependencies": [
            "module.networking.aws_route_table.my_private_rt",
            "module.networking.aws_subnet.my_private_subnet",
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7395bb084cfbaab",
            "route_table_id": "rtb-040d3fd953d441512",
            "subnet_id": "subnet-0b308b8d3e5846972"
          },
          "dependencies": [
            "module.networking.aws_route_table.my_private_rt",
            "module.networking.aws_subnet.my_private_subnet",
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d7620ee3bc62cbf",
            "route_table_id": "rtb-0ea382617b4540ade",
            "subnet_id": "subnet-0b2bde6f66e20c5be"
          },
          "dependencies": [
            "module.networking.aws_route_table.my_public_rt",
            "module.networking.aws_subnet.my_public_subnet",
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072e30c3c7d7a13df",
            "route_table_id": "rtb-0ea382617b4540ade",
            "subnet_id": "subnet-0a226b862067d6fe7"
          },
          "dependencies": [
            "module.networking.aws_route_table.my_public_rt",
            "module.networking.aws_subnet.my_public_subnet",
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d1de1f1c174cd57",
            "route_table_id": "rtb-0ea382617b4540ade",
            "subnet_id": "subnet-042eada2088c8b7e7"
          },
          "dependencies": [
            "module.networking.aws_route_table.my_public_rt",
            "module.networking.aws_subnet.my_public_subnet",
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:security-group/sg-040e90d1df1b41bac",
            "description": "Allow SSH inbound traffic from Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040e90d1df1b41bac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba261351d4605c8d"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00177813bc8a25185"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my_database_sg",
            "name_prefix": "",
            "owner_id": "707150221672",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.my_public_sg",
            "module.networking.aws_security_group.my_web_sg",
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:security-group/sg-0ba261351d4605c8d",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba261351d4605c8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my_bastion_sg",
            "name_prefix": "",
            "owner_id": "707150221672",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:security-group/sg-00177813bc8a25185",
            "description": "Allow all inbound HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00177813bc8a25185",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my_web_sg",
            "name_prefix": "",
            "owner_id": "707150221672",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:subnet/subnet-028f88d5b0618188a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028f88d5b0618188a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707150221672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2tier_private_1"
            },
            "tags_all": {
              "Name": "2tier_private_1"
            },
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:subnet/subnet-08484d304082bb5b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08484d304082bb5b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707150221672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2tier_private_2"
            },
            "tags_all": {
              "Name": "2tier_private_2"
            },
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:subnet/subnet-0b308b8d3e5846972",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b308b8d3e5846972",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707150221672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2tier_private_3"
            },
            "tags_all": {
              "Name": "2tier_private_3"
            },
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:subnet/subnet-0b2bde6f66e20c5be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2bde6f66e20c5be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "707150221672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2tier_public_1"
            },
            "tags_all": {
              "Name": "2tier_public_1"
            },
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:subnet/subnet-0a226b862067d6fe7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a226b862067d6fe7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "707150221672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2tier_public_2"
            },
            "tags_all": {
              "Name": "2tier_public_2"
            },
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:subnet/subnet-042eada2088c8b7e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042eada2088c8b7e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "707150221672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2tier_public_3"
            },
            "tags_all": {
              "Name": "2tier_public_3"
            },
            "vpc_id": "vpc-078d0e4dec802b086"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707150221672:vpc/vpc-078d0e4dec802b086",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08f05f5b8ea7b6ed1",
            "default_route_table_id": "rtb-05dda348180525cd3",
            "default_security_group_id": "sg-0211bb55fb131ded2",
            "dhcp_options_id": "dopt-d5e2a9af",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-078d0e4dec802b086",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05dda348180525cd3",
            "owner_id": "707150221672",
            "tags": {
              "Name": "my_2tier_vpc-71"
            },
            "tags_all": {
              "Name": "my_2tier_vpc-71"
            }
          },
          "dependencies": [
            "module.networking.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}